[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
serde = { version = "1.0", features = ["derive", "deserialize"] }

[dependencies]
anyhow = "1"
flutter_rust_bridge = "1"
rand = "0.8.5"
serde = "1.0"
serde_json = "1.0"
rocket = { version = "0.5.0-rc.2", features = ["secrets", "tls", "json"] }